<resources>
    <string name="app_name">Саламчик</string>
    <string name="student_name">Саяпин Дмитрий Алексеевич</string>
    <string name="description_text">Добро Пожаловать!</string>
    <string name="button_text">Узнать вашу характеристику</string>
    <string name="scrollview_title">Характеристика</string>
    <string name="long_text">Саяпин Дмитрий Алексеевич родился 6 мая 2007 года в городе Хабаровске Хабаровского края. С ранних лет проявлял склонность к обучению, успешно окончив начальные классы с отличными результатами. После завершения 4 класса он переехал в город Благовещенск Амурской области, где продолжил обучение и успешно завершил 9 классов. Впоследствии Дмитрий поступил на факультет среднего профессионального образования АмГУ на специальность «Информационные системы и программирование», демонстрируя интерес к техническим дисциплинам и стремление к профессиональному росту. По характеру Дмитрий спокойный, уравновешенный, обладает аналитическим складом ума и высокой ответственностью. Он также выделяется доброжелательностью и способностью к командной работе, что делает его ценным участником любых проектов.</string>
    <string name="back_button_text">Назад</string>
</resources>